[gd_scene load_steps=18 format=2]

[ext_resource path="res://screens/cutscenes/wolf_carying_cutscene.gd" type="Script" id=1]
[ext_resource path="res://assets/wolf_carrying_cutscene.png" type="Texture" id=2]
[ext_resource path="res://assets/italic_8px.fnt" type="BitmapFont" id=3]
[ext_resource path="res://props/skip_btn/skip_btn.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]
resource_name = "cycle"
length = 2.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("couple:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -2, 2 ), Vector2( 0, 0 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("couple:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.75, 1, 1.5, 1.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 2, 2, 2, 2 ]
}

[sub_resource type="Animation" id=2]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "fadein"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 24.0
step = 1.0
tracks/0/type = "animation"
tracks/0/path = NodePath("fading_label_1/AnimationPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": PoolStringArray( "fadein", "fadeout" ),
"times": PoolRealArray( 4, 8 )
}
tracks/1/type = "animation"
tracks/1/path = NodePath("fading_label_2/AnimationPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": PoolStringArray( "fadein", "fadeout" ),
"times": PoolRealArray( 10, 14 )
}
tracks/2/type = "animation"
tracks/2/path = NodePath("fading_label_3/AnimationPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": PoolStringArray( "fadein", "fadeout" ),
"times": PoolRealArray( 16, 20 )
}

[sub_resource type="Animation" id=12]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="wolf_carying_cutscene" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="couple" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
vframes = 2
hframes = 2
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/cycle = SubResource( 1 )

[node name="fading_label_1" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.72549, 0.74902, 0.984314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Securas : Code, Art, sfx and
          design"
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="fading_label_1"]
autoplay = "default"
anims/default = SubResource( 2 )
anims/fadein = SubResource( 3 )
anims/fadeout = SubResource( 4 )

[node name="fading_label_2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.72549, 0.74902, 0.984314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Wondard : Music"
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="fading_label_2"]
autoplay = "default"
anims/default = SubResource( 5 )
anims/fadein = SubResource( 6 )
anims/fadeout = SubResource( 7 )

[node name="fading_label_3" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 192.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.72549, 0.74902, 0.984314, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Raindrinker : Playtesting 
              and design"
uppercase = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="fading_label_3"]
autoplay = "default"
anims/default = SubResource( 8 )
anims/fadein = SubResource( 9 )
anims/fadeout = SubResource( 10 )

[node name="control_animation" type="AnimationPlayer" parent="."]
autoplay = "cycle"
anims/cycle = SubResource( 11 )

[node name="skip_btn" parent="." instance=ExtResource( 4 )]
position = Vector2( 28, 124 )

[node name="main_fade" type="AnimationPlayer" parent="."]
autoplay = "fadein"
anims/fadein = SubResource( 12 )
anims/fadeout = SubResource( 13 )
